--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "lint": "eslint .",
     "format": "prettier --write ."
   },
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
